supervisor-macros/tests/ui/compile_fail/resources_on_pool.stderr
error: only `shared` resources are supported on `pool` — members would contend for a take-kind slot's single instance; declare take/consume resources per-node
  --> tests/ui/compile_fail/resources_on_pool.rs:13:21
   |
13 |         resources: [LED: FakeLed],
   |                     ^^^
